--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-# These are supported funding model platforms
+other:
+  - "https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=A8P3SYKKUPMPN&source=url&ssrt=1762159248419"
